syntax = "proto3";

package bot.twitch.accounts.v1;

message TwitchAccount {
  string id = 1;
  string name = 2;
  string image = 3;
}

// GetTwitchAccount
message GetTwitchAccountRequest {
  string account_id = 1;
}

message GetTwitchAccountResponse {
  TwitchAccount account = 1;
}

// TwitchAccountService
service TwitchAccountService {
  rpc GetTwitchAccount (GetTwitchAccountRequest) returns (GetTwitchAccountResponse);
}
